--- a/polls/templates/polls/content/overview.html
+++ b/polls/templates/polls/content/overview.html
@@ -13,7 +13,6 @@
       <title>TTT-TheToDoTracker</title>
 
       <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-      <link rel="stylesheet" href="{% static 'css/footer.css' %}">
    </head>
 
 
@@ -47,8 +46,15 @@
          </div>
       </nav>
 
+
+    {{ todo }}
+
+
 <div class="container">  
-<h1>Have a look at your current ToDos!</h1>        
+<h1>Have a look at your current ToDos!</h1>  
+<p>
+
+</p>
   <table class="table table-striped">
     <thead>
       <tr>
@@ -59,26 +65,28 @@
 		<th></th>
       </tr>
     </thead>
+
     <tbody>
+    {% for todo in todos %}
       <tr>
-        <td>I have to do laundry later</td>
-		<td>Elias</td>
-		<td>01.02.18</td>
+        <td>{{ todo.title }}</td>
+		<td>{{ todo.name }}</td>
+		<td>{{ todo.deadline_day }}.{{ todo.deadline_month }}.{{ todo.deadline_year }}</td>
         <td>
 			<div class="progress">
-  			<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-    				60%
+  			<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{ todo.progress }}%;">
+    				{{ todo.progress }}%
   			</div>
 			</div>
-
 		</td>
 		<td>
     	<a class="btn btn-default" href="/edit/">Edit</a>
 			<button class="btn btn-danger">Delete</button>
 		</td>
       </tr>
-      
+      {% endfor %}
     </tbody>
+
   </table>
 </div>
 	
