--- a/polls/templates/polls/content/new.html
+++ b/polls/templates/polls/content/new.html
@@ -13,11 +13,13 @@
 
       <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
       <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+
+	
+	
    </head>
 
 
    <body>
-      
 
 <nav class="navbar navbar-default">
          <div class="container-fluid">
@@ -48,13 +50,15 @@
       </nav>
 
 	<!-- content's following now... -->
+	<form method="POST">
+	
+	
 
 	<div class="container">  
 		<h1>What's your task?</h1>
-
 		<div class="form-group">
 			<label for="{{ form.title.name }}">Title:</label>
-			<input name="{{ form.title.name }}" type="text" class="form-control input-lg" id="inputlg">
+			<input name="title" type="text" class="form-control input-lg" id="inputlg">
 		</div>
 
 		<div class="form-group">
@@ -63,7 +67,7 @@
 			<span class="label label-default">low</span>
 
 			<div class="btn-group" role="group" aria-label="prioGroup">
-				<button type="button" class="btn btn-default">1</button>
+				<button type="button" onclick="alert("efwe");" class="btn btn-default">1</button>
 				<button type="button" class="btn btn-default">2</button>
 				<button type="button" class="btn btn-default">3</button>
 				<button type="button" class="btn btn-default">4</button>
@@ -73,9 +77,9 @@
 			<span class="label label-danger">high</span>
 		</div>
 
-		<form class="form-inline">
+		<div class="form-inline">
 			<label for="selectPrio">Progress achieved?</label>
-			<select class="form-control">
+			<select name="progress" class="form-control">
 				<option>0%</option>
 				<option>10%</option>
 				<option>20%</option>
@@ -88,27 +92,27 @@
 				<option>90%</option>
 				<option>100%</option>
 			</select>
-	</form>
+	</div>
 
 
 	<div class="form-group">
 		<label for="comment">Description:</label>
-		<textarea class="form-control" rows="7" id="comment"></textarea>
+		<textarea name="description" class="form-control" rows="7" id="comment"></textarea>
 	</div>
 
 
 	<div class="form-group">
 		<label for="usr">Name:</label>
-		<input type="text" class="form-control" id="usr">
+		<input type="text" name="name" class="form-control" id="usr">
 	</div>
 
 
 	<label>Deadline:</label>
 
-	<form class="form-inline">
+	<div class="form-inline">
 
 		Day:
-		<select class="form-control">
+		<select name="day" class="form-control">
 			<option>1</option>
 			<option>2</option>
 			<option>3</option>
@@ -143,7 +147,7 @@
 		</select>
 
 		Month:
-		<select class="form-control">
+		<select name="month" class="form-control">
 			<option>1</option>
 			<option>2</option>
 			<option>3</option>
@@ -159,19 +163,20 @@
 		</select>
 
 		Year:
-		<select class="form-control">
+		<select name="year" class="form-control">
 			<option>2016</option>
 			<option>2017</option>
 			<option>2018</option>
 			<option>2019</option>
 		</select>
-	</form>
+	</div>
 
 	<p>
 		<div class="form-group">{% csrf_token %}
-			<button type="button" class="btn btn-success"><span class="glyphicon glyphicon-tag"></span> Create ToDo</button>
+			<button type="submit" class="btn btn-success">Create ToDo</button>
 		</div>
 	</p>
+
 
 </div>
 </div>
