--- a/polls/templates/polls/content/edit.html
+++ b/polls/templates/polls/content/edit.html
@@ -13,9 +13,29 @@
 
       <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
       <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+<script type="text/javascript">
+
+function fillSelecters() {
+	
+    /* chose the day */
+	var temp="{{ todo.deadline_day }}"; 
+    $("#day").val(temp);
+	/* chose the month */
+	var temp="{{ todo.deadline_month }}"; 
+    $("#month").val(temp);
+	/* chose the year */
+	var temp="{{ todo.deadline_year }}"; 
+    $("#year").val(temp);
+	/* chose the progress */
+    var temp="{{ todo.progress }}"+"%"; 
+    $("#progress").val(temp);
+	
+}
+</script>
+
    </head>
 
-   <body>
+   <body onload="fillSelecters()">
       
 
      <nav class="navbar navbar-default">
@@ -52,10 +72,11 @@
 
 
     <p>
-    <form role="search">
+    <form role="search" method="POST">
+	{% csrf_token %}
         <div class="form-inline">
-          <input type="text" class="form-control input-lg" placeholder="Enter title...">
-          <button type="button" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-search"></span> Find ToDo</button>
+          <input type="text" name="search" class="form-control input-lg" placeholder="Enter title...">
+          <button type="submit" class="btn btn-primary btn-lg">Find ToDo</button>
         </div>
         </form>
   </p>
@@ -64,7 +85,7 @@
 
     <div class="form-group">
       <label for="title">Title:</label>
-      <input type="text" class="form-control input-lg" id="inputlg">
+      <input type="text" class="form-control input-lg" id="inputlg" value="{{ todo.title }}">
     </div>
 
     <div class="form-group">
@@ -85,7 +106,7 @@
 
     <form class="form-inline">
       <label for="selectPrio">Progress achieved?</label>
-      <select class="form-control">
+      <select name="progress" id="progress" class="form-control">
         <option>0%</option>
         <option>10%</option>
         <option>20%</option>
@@ -102,13 +123,13 @@
 
     <div class="form-group">
       <label for="comment">Description:</label>
-      <textarea class="form-control" rows="7" id="comment"></textarea>
+      <textarea class="form-control" rows="7" id="comment">{{ todo.description }}</textarea>
     </div>
 
 
     <div class="form-group">
       <label for="usr">Name:</label>
-      <input type="text" class="form-control" id="usr">
+      <input type="text" class="form-control" id="usr" value="{{ todo.name }}">
     </div>
 
 
@@ -116,7 +137,7 @@
 
     <form class="form-inline">
       Day:
-      <select class="form-control">
+      <select name="day" id="day" class="form-control">
         <option>1</option>
         <option>2</option>
         <option>3</option>
@@ -151,7 +172,7 @@
       </select>
 
       Month:
-      <select class="form-control">
+      <select name="month" id="month" class="form-control">
         <option>1</option>
         <option>2</option>
         <option>3</option>
@@ -167,7 +188,7 @@
       </select>
 
       Year:
-      <select class="form-control">
+      <select name="year" id="year" class="form-control">
         <option>2016</option>
         <option>2017</option>
         <option>2018</option>
@@ -181,6 +202,27 @@
         <button type="button" class="btn btn-danger "><span class="glyphicon glyphicon-remove"></span> Delete ToDo</button>
       </div>
     </p>
+
+----------------------------------------------
+
+      <tr>
+        <td>{{ todo.title }}</td>
+		<td>{{ todo.name }}</td>
+		<td>{{ todo.deadline_day }}.{{ todo.deadline_month }}.{{ todo.deadline_year }}</td>
+        <td>
+			<div class="progress">
+  			<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{ todo.progress }}%;">
+    				{{ todo.progress }}%
+  			</div>
+			</div>
+		</td>
+		<td>
+    	<a class="btn btn-default" href="/edit/">Edit</a>
+			<button class="btn btn-danger">Delete</button>
+		</td>
+      </tr>
+
+-----------------------------------------------
 
   </div><!--###-->
 </div> <!--###-->
