--- a/polls/templates/polls/content/imprint.html
+++ b/polls/templates/polls/content/imprint.html
@@ -1,56 +1,54 @@
   {% load staticfiles %}
   <!DOCTYPE html>
   <html lang="de">
-   <head>
-      <link rel="shortcut icon" href="{% static 'icons/Checked_icon_16x16.png' %}" type="image/png" />
-      <link rel="icon" href="{% static 'icons/Checked_icon_16x16.png' %}" type="image/png" />
+  <head>
+    <link rel="shortcut icon" href="{% static 'icons/Checked_icon_16x16.png' %}" type="image/png" />
+    <link rel="icon" href="{% static 'icons/Checked_icon_16x16.png' %}" type="image/png" />
 
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <title>TTT-TheToDoTracker</title>
+    <title>TTT &mdash; TheToDoTracker</title>
 
-      <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-      <link rel="stylesheet" href="{% static 'css/footer.css' %}">
-   </head>
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+  </head>
+  <body>
+    
+    <nav class="navbar navbar-default">
+     <div class="container-fluid">
+      <div class="navbar-header">
+       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+       </button>
+       <a class="navbar-brand" href="/">TheToDoTracker</a>
+     </div>
+     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+       <ul class="nav navbar-nav">
+        <li><a href="/overview/">Overview</a></li>
+        <li><a href="/new/">New</a></li>
+        <li><a href="/edit/">Edit</a></li>
+        <li><a href="/imprint/">Imprint</a></li>
+      </ul>
+      <div class="navbar-form navbar-right">
+        <form role="search">
+         <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+    </div>
+  </div>
+</div>
+</nav>
 
+<div class="container"> 
 
-   <body>
+  <h1>Imprint</h1>
+
   
-  <nav class="navbar navbar-default">
-         <div class="container-fluid">
-            <div class="navbar-header">
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-               <span class="sr-only">Toggle navigation</span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="/">TheToDoTracker</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-               <ul class="nav navbar-nav">
-                  <li><a href="/overview/">Overview</a></li>
-                  <li><a href="/new/">New</a></li>
-                  <li><a href="/edit/">Edit</a></li>
-                  <li><a href="/imprint/">Imprint</a></li>
-               </ul>
-               <div class="navbar-form navbar-right">
-                  <form role="search">
-                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                     </div>
-                     <button type="submit" class="btn btn-default">Submit</button>
-                  </form>
-               </div>
-            </div>
-         </div>
-      </nav>
-
-  <div class="container"> 
-
-    <h1>Imprint</h1>
-
-   
   <div class="row">
     <div class="col-sm-4">
 
@@ -63,13 +61,22 @@
       <p><a href="mailto:team@the-todo-tracker.org">team@the-todo-tracker.org</a> (not active!)</p>
     </div>    
     <div class="col-sm-8">
-        <img src="{% static 'media/tu-berlin.png' %}" class="img-responsive" alt="c/o TU Berlin" width="150" height="auto">
-       </div>
-       </div>
+      <img src="{% static 'media/tu-berlin.png' %}" class="img-responsive" alt="c/o TU Berlin" width="150" height="auto">
+    </div>
+  </div>
 
   <h2>Disclaimer</h2>
   <h3>Accountability for content</h3><br/>The contents of our pages have been created with the utmost care. However, we cannot guarantee the contents' accuracy, completeness or topicality. According to statutory provisions, we are furthermore responsible for our own content on these web pages. In this context, please note that we are accordingly not obliged to monitor merely the transmitted or saved information of third parties, or investigate circumstances pointing to illegal activity. Our obligations to remove or block the use of information under generally applicable laws remain unaffected by this as per &sect;&sect; 8 to 10 of the Telemedia Act (TMG).<br/><br/><h3>Accountability for links</h3><br/>Responsibility for the content of external links (to web pages of third parties) lies solely with the operators of the linked pages. No violations were evident to us at the time of linking. Should any legal infringement become known to us, we will remove the respective link immediately.<br/><br/><h3>Copyright</h3><br/> Our web pages and their contents are subject to German copyright law. Unless expressly permitted by law (&sect; 44a et seq. of the copyright law), every form of utilizing, reproducing or processing works subject to copyright protection on our web pages requires the prior consent of the respective owner of the rights. Individual reproductions of a work are allowed only for private use, so must not serve either directly or indirectly for earnings. Unauthorized utilization of copyrighted works is punishable (&sect; 106 of the copyright law).<br/><br/><i>Quelle:  </i><a href="http://www.muster-vorlagen.net" target="_blank">Rechtssicheres Impressum – www.Muster-Vorlagen.net</a><br/><br/></div>
-  </div>
+</div>
+<footer class="footer">
+ <div class="container">
+  <div class="container_footer">
+   <p class="text-muted_footer">&copy;  2016  &mdash;  TheToDoTracker  &mdash;  <a href="https://github.com/eliasgruenewald/ppsntodo-django">Documentation</a></p>
+ </div>
+</div>
+</footer>   
 
-  </body>
-  </html>
+<script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
+<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+</body>
+</html>
