--- a/polls/templates/polls/content/overview.html
+++ b/polls/templates/polls/content/overview.html
@@ -1,24 +1,17 @@
 {% load staticfiles %}
-
 <!DOCTYPE html>
 <html lang="de">
    <head>
       <link rel="shortcut icon" href="{% static 'icons/Checked_icon_16x16.png' %}" type="image/png" />
       <link rel="icon" href="{% static 'icons/Checked_icon_16x16.png' %}" type="image/png" />
-
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-
-      <title>TTT-TheToDoTracker</title>
-
+      <title>TTT &mdash; TheToDoTracker</title>
       <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
    </head>
-
-
    <body>
-      
-    <nav class="navbar navbar-default">
+      <nav class="navbar navbar-default">
          <div class="container-fluid">
             <div class="navbar-header">
                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -37,7 +30,7 @@
                <div class="navbar-form navbar-right">
                   <form role="search">
                      <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
+                        <input type="text" class="form-control" placeholder="Which one?">
                      </div>
                      <button type="submit" class="btn btn-default">Submit</button>
                   </form>
@@ -45,55 +38,56 @@
             </div>
          </div>
       </nav>
-
-
-
-
-<div class="container">  
-<h1>Have a look at your current ToDos!</h1>  
-<p>
-
-</p>
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Task</th>
-		<th>Name</th>
-		<th>Deadline</th>
-        <th>Progress</th>
-		<th></th>
-      </tr>
-    </thead>
-
-    <tbody>
-    {% for todo in todos %}
-      <tr>
-        <td name="title">{{ todo.title }}</td>
-		<td>{{ todo.name }}</td>
-		<td>{{ todo.deadline_day }}.{{ todo.deadline_month }}.{{ todo.deadline_year }}</td>
-        <td>
-			<div class="progress">
-  			<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{ todo.progress }}%;">
-    				{{ todo.progress }}%
-  			</div>
-			</div>
-		</td>
-		<td>
-		<form>
-		<button type="submit" formmethod="post" formaction="/overEdit/" class="btn btn-default">Edit</button>
-				<!-- Just to know this is only for the Django freamwork!-->
-				{% csrf_token %}
-		 		<input type="hidden" name="id" value="{{ todo.id }}">
-				<!-- ------------------------------------------------- !-->
-		<button type="submit" formmethod="post" formaction="/delete/" class="btn btn-danger ">Delete</button>
-		</form>
-		</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-
-  </table>
-</div>
-	
-  </body>
+      <div class="container">
+         <h1>Have a look at your current ToDos!</h1>
+         <p>
+         </p>
+         <table class="table table-striped">
+            <thead>
+               <tr>
+                  <th>Task</th>
+                  <th>Name</th>
+                  <th>Deadline</th>
+                  <th>Progress</th>
+                  <th></th>
+               </tr>
+            </thead>
+            <tbody>
+               {% for todo in todos %}
+               <tr>
+                  <td name="title">{{ todo.title }}</td>
+                  <td>{{ todo.name }}</td>
+                  <td>{{ todo.deadline_day }}.{{ todo.deadline_month }}.{{ todo.deadline_year }}</td>
+                  <td>
+                     <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{ todo.progress }}%;">
+                           {{ todo.progress }}%
+                        </div>
+                     </div>
+                  </td>
+                  <td>
+                     <form>
+                        <button type="submit" formmethod="post" formaction="/overEdit/" class="btn btn-default">Edit</button>
+                        <!-- Just to know this is only for the Django freamwork!-->
+                        {% csrf_token %}
+                        <input type="hidden" name="id" value="{{ todo.id }}">
+                        <!-- ........................................... !-->
+                        <button type="submit" formmethod="post" formaction="/delete/" class="btn btn-danger ">Delete</button>
+                     </form>
+                  </td>
+               </tr>
+               {% endfor %}
+            </tbody>
+         </table>
+      </div>
+      <footer class="footer">
+         <div class="container">
+            <div class="container_footer">
+               <p class="text-muted_footer">&copy;  2016  &mdash;  TheToDoTracker  &mdash;  <a href="https://github.com/eliasgruenewald/ppsntodo-django">Documentation</a></p>
+            </div>
+         </div>
+      </footer>
+      <script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
+      <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+   </body>
 </html>
