--- a/polls/templates/polls/content/new.html
+++ b/polls/templates/polls/content/new.html
@@ -33,11 +33,12 @@
 					<li><a href="/imprint/">Imprint</a></li>
 				</ul>
 				<div class="navbar-form navbar-right">
-					<form role="search">
+					<form role="search" method="POST">
+					{% csrf_token %}
 						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Search">
+							<input type="text" name="bigSearch" class="form-control" placeholder="Which task?">
 						</div>
-						<button type="submit" class="btn btn-default">Submit</button>
+						<button type="submit" class="btn btn-default">Search</button>
 					</form>
 				</div>
 			</div>
@@ -53,121 +54,130 @@
 				<input name="title" type="text" class="form-control input-lg" id="inputlg">
 			</div>
 
-			<div class="form-group">
-				<label for="selectPrio">Priority:</label><br />
-
-				<span class="label label-default">low</span>
-
-				<div class="btn-group" role="group" aria-label="prioGroup">
-					<button type="button" onclick="alert("efwe");" class="btn btn-default">1</button>
-					<button type="button" class="btn btn-default">2</button>
-					<button type="button" class="btn btn-default">3</button>
-					<button type="button" class="btn btn-default">4</button>
-					<button type="button" class="btn btn-default">5</button>
-				</div>
-
-				<span class="label label-danger">high</span>
-			</div>
-
 			<div class="form-inline">
-				<label for="selectPrio">Progress achieved?</label>
-				<select name="progress" class="form-control">
-					<option>0%</option>
-					<option>10%</option>
-					<option>20%</option>
-					<option>30%</option>
-					<option>40%</option>
-					<option>50%</option>
-					<option>60%</option>
-					<option>70%</option>
-					<option>80%</option>
-					<option>90%</option>
-					<option>100%</option>
-				</select>
-			</div>
+				<label for="priority">Priority:</label><br />
 
-			<div class="form-group">
-				<label for="comment">Description:</label>
-				<textarea name="description" class="form-control" rows="7" id="comment"></textarea>
-			</div>
+				<span class="label label-default">1: low</span>
 
-			<div class="form-group">
-				<label for="usr">Name:</label>
-				<input type="text" name="name" class="form-control" id="usr">
-			</div>
+      <!-- div class="btn-group" role="group" aria-label="prioGroup">
+        <button type="button" class="btn btn-default disabled">1</button>
+        <button type="button" class="btn btn-default disabled">2</button>
+        <button type="button" class="btn btn-default disabled">3</button>
+        <button type="button" class="btn btn-default disabled">4</button>
+        <button type="button" class="btn btn-default disabled">5</button>
+    </div -->
 
-			<label>Deadline:</label>
+    <!--div class="form-inline"-->
+    <select name="priority" id="priority" class="form-control">
+    	<option>1</option>
+    	<option>2</option>
+    	<option>3</option>
+    	<option>4</option>
+    	<option>5</option>
+    </select>
+    <!--/div -->
+    <span class="label label-danger">5: high</span>
+</div>
 
-			<div class="form-inline">
+<div class="form-inline">
+	<label for="selectPrio">Progress achieved?</label>
+	<select name="progress" class="form-control">
+		<option>0%</option>
+		<option>10%</option>
+		<option>20%</option>
+		<option>30%</option>
+		<option>40%</option>
+		<option>50%</option>
+		<option>60%</option>
+		<option>70%</option>
+		<option>80%</option>
+		<option>90%</option>
+		<option>100%</option>
+	</select>
+</div>
 
-				Day:
-				<select name="day" class="form-control">
-					<option>1</option>
-					<option>2</option>
-					<option>3</option>
-					<option>4</option>
-					<option>5</option>
-					<option>6</option>
-					<option>7</option>
-					<option>8</option>
-					<option>9</option>
-					<option>10</option>
-					<option>11</option>
-					<option>12</option>
-					<option>13</option>
-					<option>14</option>
-					<option>15</option>
-					<option>16</option>
-					<option>17</option>
-					<option>18</option>
-					<option>19</option>
-					<option>20</option>
-					<option>21</option>
-					<option>22</option>
-					<option>23</option>
-					<option>24</option>
-					<option>25</option>
-					<option>26</option>
-					<option>27</option>
-					<option>28</option>
-					<option>29</option>
-					<option>30</option>
-					<option>31</option>
-				</select>
+<div class="form-group">
+	<label for="comment">Description:</label>
+	<textarea name="description" class="form-control" rows="7" id="comment"></textarea>
+</div>
 
-				Month:
-				<select name="month" class="form-control">
-					<option>1</option>
-					<option>2</option>
-					<option>3</option>
-					<option>4</option>
-					<option>5</option>
-					<option>6</option>
-					<option>7</option>
-					<option>8</option>
-					<option>9</option>
-					<option>10</option>
-					<option>11</option>
-					<option>12</option>
-				</select>
+<div class="form-group">
+	<label for="usr">Name:</label>
+	<input type="text" name="name" class="form-control" id="usr">
+</div>
 
-				Year:
-				<select name="year" class="form-control">
-					<option>2016</option>
-					<option>2017</option>
-					<option>2018</option>
-					<option>2019</option>
-				</select>
-			</div>
+<label>Deadline:</label>
 
-			<p>
-				<div class="form-group">{% csrf_token %}
-					<button type="submit" class="btn btn-success">Create ToDo</button>
-				</div>
-			</p>
+<div class="form-inline">
 
-		</form>
+	Day:
+	<select name="day" class="form-control">
+		<option>1</option>
+		<option>2</option>
+		<option>3</option>
+		<option>4</option>
+		<option>5</option>
+		<option>6</option>
+		<option>7</option>
+		<option>8</option>
+		<option>9</option>
+		<option>10</option>
+		<option>11</option>
+		<option>12</option>
+		<option>13</option>
+		<option>14</option>
+		<option>15</option>
+		<option>16</option>
+		<option>17</option>
+		<option>18</option>
+		<option>19</option>
+		<option>20</option>
+		<option>21</option>
+		<option>22</option>
+		<option>23</option>
+		<option>24</option>
+		<option>25</option>
+		<option>26</option>
+		<option>27</option>
+		<option>28</option>
+		<option>29</option>
+		<option>30</option>
+		<option>31</option>
+	</select>
+
+	Month:
+	<select name="month" class="form-control">
+		<option>1</option>
+		<option>2</option>
+		<option>3</option>
+		<option>4</option>
+		<option>5</option>
+		<option>6</option>
+		<option>7</option>
+		<option>8</option>
+		<option>9</option>
+		<option>10</option>
+		<option>11</option>
+		<option>12</option>
+	</select>
+
+	Year:
+	<select name="year" class="form-control">
+		<option>2016</option>
+		<option>2017</option>
+		<option>2018</option>
+		<option>2019</option>
+	</select>
+</div>
+
+<p>
+	<div class="form-group">{% csrf_token %}
+		<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-tag"></span> Create ToDo</button>
 	</div>
+</p>
+
+</form>
+</div>
 </div>
 <footer class="footer">
 	<div class="container">
