--- a/polls/templates/polls/content/edit.html
+++ b/polls/templates/polls/content/edit.html
@@ -1,61 +1,60 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="de">
-   <head>
-      <link rel="shortcut icon" href="{% static 'icons/Checked_icon_16x16.png' %}" type="image/png" />
-      <link rel="icon" href="{% static 'icons/Checked_icon_16x16.png' %}" type="image/png" />
+<head>
+  <link rel="shortcut icon" href="{% static 'icons/Checked_icon_16x16.png' %}" type="image/png" />
+  <link rel="icon" href="{% static 'icons/Checked_icon_16x16.png' %}" type="image/png" />
 
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <title>TTT &mdash; TheToDoTracker</title>
+  <title>TTT &mdash; TheToDoTracker</title>
 
-      <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-      <link rel="stylesheet" href="{% static 'css/footer.css' %}">
-      <script type="text/javascript">
-      
-      function fillSelectors() {
-        /* choose the day */
-      	var temp = "{{ todo.deadline_day }}"; 
-          $("#day").val(temp);
-      	/* choose the month */
-      	var temp = "{{ todo.deadline_month }}"; 
-          $("#month").val(temp);
-      	/* choose the year */
-      	var temp = "{{ todo.deadline_year }}"; 
-          $("#year").val(temp);
-      	/* choose the progress */
-        var temp = "{{ todo.progress }}"+"%"; 
-          $("#progress").val(temp);
-        /* choose the priority */
-        var temp = "{{ todo.priority }}"; 
-          $("#priority").val(temp);
-      }
-      </script>
+  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+  <script type="text/javascript">
+    
+    function fillSelectors() {
+      /* choose the day */
+      var temp = "{{ todo.deadline_day }}"; 
+      $("#day").val(temp);
+      /* choose the month */
+      var temp = "{{ todo.deadline_month }}"; 
+      $("#month").val(temp);
+      /* choose the year */
+      var temp = "{{ todo.deadline_year }}"; 
+      $("#year").val(temp);
+      /* choose the progress */
+      var temp = "{{ todo.progress }}"+"%"; 
+      $("#progress").val(temp);
+      /* choose the priority */
+      var temp = "{{ todo.priority }}"; 
+      $("#priority").val(temp);
+    }
+  </script>
 
-   </head>
+</head>
 
-   <body onload="fillSelectors()">
-      
+<body onload="fillSelectors()">
 
-     <nav class="navbar navbar-default">
-         <div class="container-fluid">
-            <div class="navbar-header">
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-               <span class="sr-only">Toggle navigation</span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="/">TheToDoTracker</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-               <ul class="nav navbar-nav">
-                  <li><a href="/overview/">Overview</a></li>
-                  <li><a href="/new/">New</a></li>
-                  <li><a href="/edit/">Edit</a></li>
-                  <li><a href="/imprint/">Imprint</a></li>
-               </ul>
-               <div class="navbar-form navbar-right">
+ <nav class="navbar navbar-default">
+   <div class="container-fluid">
+    <div class="navbar-header">
+     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+       <span class="sr-only">Toggle navigation</span>
+       <span class="icon-bar"></span>
+     </button>
+     <a class="navbar-brand" href="/">TheToDoTracker</a>
+   </div>
+   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+     <ul class="nav navbar-nav">
+      <li><a href="/overview/">Overview</a></li>
+      <li><a href="/new/">New</a></li>
+      <li><a href="/edit/">Edit</a></li>
+      <li><a href="/imprint/">Imprint</a></li>
+    </ul>
+               <!--div class="navbar-form navbar-right">
                   <form role="search" method="POST">
                   {% csrf_token %}
                      <div class="form-group">
@@ -63,173 +62,160 @@
                      </div>
                      <button type="submit" class="btn btn-default">Search</button>
                   </form>
-               </div>
+                </div-->
+              </div>
             </div>
-         </div>
-      </nav>
+          </nav>
 
 
-  <div class="container">  
-    <h1>Which task would you like to edit?</h1>
-    <p>
-    <form role="search" method="POST">
-	{% csrf_token %}
-        <div class="form-inline">
-          <input type="text" name="search" class="form-control input-lg" placeholder="Enter title...">
-          <button type="submit" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-search"></span> Find ToDo</button>
-        </div>
-        </form>
-  </p>
+          <div class="container">  
+            <h1>Which task would you like to edit?</h1>
+            <p>
+              <form role="search" method="POST">
+               {% csrf_token %}
+               <div class="form-inline">
+                <input type="text" name="search" class="form-control input-lg" placeholder="Enter title...">
+                <button type="submit" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-search"></span> Find ToDo</button>
+              </div>
+            </form>
+          </p>
 
-  <hr>
-		<form method="POST" action="/update/">
-		{% csrf_token %}
-		<!-- Just to know this is only for the Django framework!-->
-		 <input type="hidden" name="id" value="{{ todo.id }}">
-		<!-- ................................................. !-->
-    <div class="form-group">
-      <label for="title">Title:</label>
-      <input type="text" name="title" class="form-control input-lg" id="inputlg" value="{{ todo.title }}">
-    </div>
-
-    <div class="form-inline">
-      <label for="priority">Priority:</label><br />
-
-      <span class="label label-default">1: low</span>
-
-      <!-- div class="btn-group" role="group" aria-label="prioGroup">
-        <button type="button" class="btn btn-default disabled">1</button>
-        <button type="button" class="btn btn-default disabled">2</button>
-        <button type="button" class="btn btn-default disabled">3</button>
-        <button type="button" class="btn btn-default disabled">4</button>
-        <button type="button" class="btn btn-default disabled">5</button>
-      </div -->
-
-      <!--div class="form-inline"-->
-      <select name="priority" id="priority" class="form-control">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-    <!--/div -->
-      <span class="label label-danger">5: high</span>
-    </div>
-
-    <div class="form-inline">
-      <label for="selectPrio">Progress achieved?</label>
-      <select name="progress" id="progress" class="form-control">
-        <option>0%</option>
-        <option>10%</option>
-        <option>20%</option>
-        <option>30%</option>
-        <option>40%</option>
-        <option>50%</option>
-        <option>60%</option>
-        <option>70%</option>
-        <option>80%</option>
-        <option>90%</option>
-        <option>100%</option>
-      </select>
-    </div>
-
-    <div class="form-group">
-      <label for="comment">Description:</label>
-      <textarea name="description" class="form-control" rows="7" id="comment">{{ todo.description }}</textarea>
-    </div>
-
-
-    <div class="form-group">
-      <label for="usr">Name:</label>
-      <input name="name" type="text" class="form-control" id="usr" value="{{ todo.name }}">
-    </div>
-
-
-    <label>Deadline:</label>
-
-    <div class="form-inline">
-      Day:
-      <select name="day" id="day" class="form-control">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-        <option>6</option>
-        <option>7</option>
-        <option>8</option>
-        <option>9</option>
-        <option>10</option>
-        <option>11</option>
-        <option>12</option>
-        <option>13</option>
-        <option>14</option>
-        <option>15</option>
-        <option>16</option>
-        <option>17</option>
-        <option>18</option>
-        <option>19</option>
-        <option>20</option>
-        <option>21</option>
-        <option>22</option>
-        <option>23</option>
-        <option>24</option>
-        <option>25</option>
-        <option>26</option>
-        <option>27</option>
-        <option>28</option>
-        <option>29</option>
-        <option>30</option>
-        <option>31</option>
-      </select>
-
-      Month:
-      <select name="month" id="month" class="form-control">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-        <option>6</option>
-        <option>7</option>
-        <option>8</option>
-        <option>9</option>
-        <option>10</option>
-        <option>11</option>
-        <option>12</option>
-      </select>
-
-      Year:
-      <select name="year" id="year" class="form-control">
-        <option>2016</option>
-        <option>2017</option>
-        <option>2018</option>
-        <option>2019</option>
-      </select>
-    </div>
-
-    <p>
-      <div class="form-group">
-        <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-repeat"></span> Update ToDo</button>
-        <button type="submit" formmethod="post" formaction="/delete/" class="btn btn-danger "><span class="glyphicon glyphicon-remove"></span> Delete ToDo</button>
-      </div>
-    </p>
-</form>
-
-  </div><!--###-->
-</div> <!--###-->
-
-   <footer class="footer">
-         <div class="container">
-            <div class="container_footer">
-               <p class="text-muted_footer">&copy;  2016  &mdash;  TheToDoTracker  &mdash;  <a href="https://github.com/eliasgruenewald/ppsntodo-django">Documentation</a></p>
+          <hr>
+          <form method="POST" action="/update/">
+            {% csrf_token %}
+            <input type="hidden" name="id" value="{{ todo.id }}">
+            <div class="form-group">
+              <label for="title">Title:</label>
+              <input type="text" name="title" class="form-control input-lg" id="inputlg" value="{{ todo.title }}">
             </div>
-         </div>
-      </footer>   
 
-<script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
-<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+            <div class="form-inline">
+              <label for="priority">Priority:</label><br />
 
-  </body>
-</html>
+              <span class="label label-default">1: low</span>
+
+              <select name="priority" id="priority" class="form-control">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+              </select>
+              <!--/div -->
+              <span class="label label-danger">5: high</span>
+            </div>
+
+            <div class="form-inline">
+              <label for="selectPrio">Progress achieved?</label>
+              <select name="progress" id="progress" class="form-control">
+                <option>0%</option>
+                <option>10%</option>
+                <option>20%</option>
+                <option>30%</option>
+                <option>40%</option>
+                <option>50%</option>
+                <option>60%</option>
+                <option>70%</option>
+                <option>80%</option>
+                <option>90%</option>
+                <option>100%</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label for="comment">Description:</label>
+              <textarea name="description" class="form-control" rows="7" id="comment">{{ todo.description }}</textarea>
+            </div>
+
+            <div class="form-group">
+              <label for="usr">Name:</label>
+              <input name="name" type="text" class="form-control" id="usr" value="{{ todo.name }}">
+            </div>
+
+            <label>Deadline:</label>
+
+            <div class="form-inline">
+              Day:
+              <select name="day" id="day" class="form-control">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+                <option>11</option>
+                <option>12</option>
+                <option>13</option>
+                <option>14</option>
+                <option>15</option>
+                <option>16</option>
+                <option>17</option>
+                <option>18</option>
+                <option>19</option>
+                <option>20</option>
+                <option>21</option>
+                <option>22</option>
+                <option>23</option>
+                <option>24</option>
+                <option>25</option>
+                <option>26</option>
+                <option>27</option>
+                <option>28</option>
+                <option>29</option>
+                <option>30</option>
+                <option>31</option>
+              </select>
+
+              Month:
+              <select name="month" id="month" class="form-control">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+                <option>11</option>
+                <option>12</option>
+              </select>
+
+              Year:
+              <select name="year" id="year" class="form-control">
+                <option>2016</option>
+                <option>2017</option>
+                <option>2018</option>
+                <option>2019</option>
+              </select>
+            </div>
+
+            <p>
+              <div class="form-group">
+                <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-repeat"></span> Update ToDo</button>
+                <button type="submit" formmethod="post" formaction="/delete/" class="btn btn-danger "><span class="glyphicon glyphicon-remove"></span> Delete ToDo</button>
+              </div>
+            </p>
+          </form>
+
+        </div><!--###-->
+      </div> <!--###-->
+
+      <footer class="footer">
+       <div class="container">
+        <div class="container_footer">
+         <p class="text-muted_footer">&copy;  2016  &mdash;  TheToDoTracker  &mdash;  <a href="https://github.com/eliasgruenewald/ppsntodo-django">Documentation</a></p>
+       </div>
+     </div>
+   </footer>   
+
+   <script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
+   <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+
+ </body>
+ </html>
