--- a/polls/templates/polls/content/imprint.html
+++ b/polls/templates/polls/content/imprint.html
@@ -32,14 +32,14 @@
         <li><a href="/edit/">Edit</a></li>
         <li><a href="/imprint/">Imprint</a></li>
       </ul>
-      <div class="navbar-form navbar-right">
+      <!--div class="navbar-form navbar-right">
         <form role="search">
          <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-    </div>
+    </div-->
   </div>
 </div>
 </nav>
@@ -74,8 +74,7 @@
    <p class="text-muted_footer">&copy;  2016  &mdash;  TheToDoTracker  &mdash;  <a href="https://github.com/eliasgruenewald/ppsntodo-django">Documentation</a></p>
  </div>
 </div>
-</footer>   
-
+</footer>
 <script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 </body>
