--- a/polls/templates/polls/content/new.html
+++ b/polls/templates/polls/content/new.html
@@ -32,15 +32,15 @@
 					<li><a href="/edit/">Edit</a></li>
 					<li><a href="/imprint/">Imprint</a></li>
 				</ul>
-				<div class="navbar-form navbar-right">
-					<form role="search" method="POST">
+				<!--div class="navbar-form navbar-right">
+					<form role="bigSearch" method="POST">
 					{% csrf_token %}
 						<div class="form-group">
 							<input type="text" name="bigSearch" class="form-control" placeholder="Which task?">
 						</div>
 						<button type="submit" class="btn btn-default">Search</button>
 					</form>
-				</div>
+				</div-->
 			</div>
 		</div>
 	</nav>
@@ -56,128 +56,116 @@
 
 			<div class="form-inline">
 				<label for="priority">Priority:</label><br />
-
 				<span class="label label-default">1: low</span>
+				<select name="priority" id="priority" class="form-control">
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+				</select>
+				<span class="label label-danger">5: high</span>
+			</div>
 
-      <!-- div class="btn-group" role="group" aria-label="prioGroup">
-        <button type="button" class="btn btn-default disabled">1</button>
-        <button type="button" class="btn btn-default disabled">2</button>
-        <button type="button" class="btn btn-default disabled">3</button>
-        <button type="button" class="btn btn-default disabled">4</button>
-        <button type="button" class="btn btn-default disabled">5</button>
-    </div -->
+			<div class="form-inline">
+				<label for="progress">Progress achieved?</label>
+				<select name="progress" class="form-control">
+					<option>0%</option>
+					<option>10%</option>
+					<option>20%</option>
+					<option>30%</option>
+					<option>40%</option>
+					<option>50%</option>
+					<option>60%</option>
+					<option>70%</option>
+					<option>80%</option>
+					<option>90%</option>
+					<option>100%</option>
+				</select>
+			</div>
 
-    <!--div class="form-inline"-->
-    <select name="priority" id="priority" class="form-control">
-    	<option>1</option>
-    	<option>2</option>
-    	<option>3</option>
-    	<option>4</option>
-    	<option>5</option>
-    </select>
-    <!--/div -->
-    <span class="label label-danger">5: high</span>
-</div>
+			<div class="form-group">
+				<label for="comment">Description:</label>
+				<textarea name="description" class="form-control" rows="7" id="comment"></textarea>
+			</div>
 
-<div class="form-inline">
-	<label for="selectPrio">Progress achieved?</label>
-	<select name="progress" class="form-control">
-		<option>0%</option>
-		<option>10%</option>
-		<option>20%</option>
-		<option>30%</option>
-		<option>40%</option>
-		<option>50%</option>
-		<option>60%</option>
-		<option>70%</option>
-		<option>80%</option>
-		<option>90%</option>
-		<option>100%</option>
-	</select>
-</div>
+			<div class="form-group">
+				<label for="usr">Name:</label>
+				<input type="text" name="name" class="form-control" id="usr">
+			</div>
 
-<div class="form-group">
-	<label for="comment">Description:</label>
-	<textarea name="description" class="form-control" rows="7" id="comment"></textarea>
-</div>
+			<label>Deadline:</label>
 
-<div class="form-group">
-	<label for="usr">Name:</label>
-	<input type="text" name="name" class="form-control" id="usr">
-</div>
+			<div class="form-inline">
 
-<label>Deadline:</label>
+				Day:
+				<select name="day" class="form-control">
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+					<option>10</option>
+					<option>11</option>
+					<option>12</option>
+					<option>13</option>
+					<option>14</option>
+					<option>15</option>
+					<option>16</option>
+					<option>17</option>
+					<option>18</option>
+					<option>19</option>
+					<option>20</option>
+					<option>21</option>
+					<option>22</option>
+					<option>23</option>
+					<option>24</option>
+					<option>25</option>
+					<option>26</option>
+					<option>27</option>
+					<option>28</option>
+					<option>29</option>
+					<option>30</option>
+					<option>31</option>
+				</select>
 
-<div class="form-inline">
+				Month:
+				<select name="month" class="form-control">
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+					<option>10</option>
+					<option>11</option>
+					<option>12</option>
+				</select>
 
-	Day:
-	<select name="day" class="form-control">
-		<option>1</option>
-		<option>2</option>
-		<option>3</option>
-		<option>4</option>
-		<option>5</option>
-		<option>6</option>
-		<option>7</option>
-		<option>8</option>
-		<option>9</option>
-		<option>10</option>
-		<option>11</option>
-		<option>12</option>
-		<option>13</option>
-		<option>14</option>
-		<option>15</option>
-		<option>16</option>
-		<option>17</option>
-		<option>18</option>
-		<option>19</option>
-		<option>20</option>
-		<option>21</option>
-		<option>22</option>
-		<option>23</option>
-		<option>24</option>
-		<option>25</option>
-		<option>26</option>
-		<option>27</option>
-		<option>28</option>
-		<option>29</option>
-		<option>30</option>
-		<option>31</option>
-	</select>
+				Year:
+				<select name="year" class="form-control">
+					<option>2016</option>
+					<option>2017</option>
+					<option>2018</option>
+					<option>2019</option>
+				</select>
+			</div>
 
-	Month:
-	<select name="month" class="form-control">
-		<option>1</option>
-		<option>2</option>
-		<option>3</option>
-		<option>4</option>
-		<option>5</option>
-		<option>6</option>
-		<option>7</option>
-		<option>8</option>
-		<option>9</option>
-		<option>10</option>
-		<option>11</option>
-		<option>12</option>
-	</select>
+			<p>
+				<div class="form-group">{% csrf_token %}
+					<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-tag"></span> Create ToDo</button>
+				</div>
+			</p>
 
-	Year:
-	<select name="year" class="form-control">
-		<option>2016</option>
-		<option>2017</option>
-		<option>2018</option>
-		<option>2019</option>
-	</select>
-</div>
-
-<p>
-	<div class="form-group">{% csrf_token %}
-		<button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-tag"></span> Create ToDo</button>
+		</form>
 	</div>
-</p>
-
-</form>
-</div>
 </div>
 <footer class="footer">
 	<div class="container">
